test/conformance/chainsaw/generating-policies/data/sync/generate-clusterrolebinding-from-namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-gpol-crb
