test/conformance/chainsaw/generating-policies/data/sync/generate-clusterrolebinding-from-namespace/clusterrolebinding-assert.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: test-app-gpol-crb-view
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: view
subjects:
- kind: ServiceAccount
  name: default
  namespace: app-gpol-crb
