test/conformance/chainsaw/generating-policies/data/sync/generate-clusterrolebinding-from-namespace/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-clusterrolebinding-from-namespace
spec:
  concurrent: false
  steps:
  - name: create permissions
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-user
  - name: create namespace trigger
    try:
    - apply:
        file: namespace.yaml
  - name: check that the clusterrolebinding is generated
    try:
    - assert:
        file: clusterrolebinding-assert.yaml
  - name: cleanup generated clusterrolebinding
    try:
    - delete:
        ref:
          apiVersion: rbac.authorization.k8s.io/v1
          kind: ClusterRoleBinding
          name: test-app-gpol-crb-view
